changed the login form to be more visible, fixed the routine date bug for when you have no routines, and removed IE explorer bug

--- a/ui/css/StyleSheet.css
+++ b/ui/css/StyleSheet.css
@@ -6,12 +6,18 @@
 
 #login
 {
-    padding: 10px 0px 0px 0px;
-    top: 0px;
-    position: absolute;
-    float: right;
-    z-index: 10;
-    right: 0%;
+padding: 0px 0px 0px 0px;
+top: -46px;
+float: right;
+z-index: 10;
+right: 0%;
+position: relative;
+}
+
+#login a
+{
+    text-decoration: underline;
+    color: rgb(204, 204, 204);
 }
 
 #header
